--- a/savedfiles/index.html
+++ b/savedfiles/index.html
@@ -52,6 +52,7 @@
         <input type="text" id="name" class="form-control mr-2" placeholder="Имя игрока">
         <button type="button" class="btn btn-custom" onclick="addPlayer()">Добавить игрока</button>
     </form>
+        <input type="number" id="max-points" class="form-control mr-2" placeholder="Максимум очков" value="501">
      <button type="button" class="btn btn-custom" onclick="resetGame()">Сбросить результаты</button>
 
     <h2></h2>
